included separate angular cdns for routes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
     <link rel=stylesheet href="css/site.css" />
     <link rel=stylesheet href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.js"></script>
     <script src="js/tictactoe/game.js"></script>
     <script src="js/tictactoe/board.js"></script>
     <script src="js/tictactoe/player.js"></script>
