started with controller and app routing

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="js/controllers/gameCtrl.js"></script>
 </head>
 <body>
-	<div ng-view></div>
+	<div ng-view>
+    </div>
 </body>
 </html>
