--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-resource.js"></script>
-    <script src="js/tictactoe/game.js"></script>
-    <script src="js/tictactoe/board.js"></script>
-    <script src="js/tictactoe/player.js"></script>
+    <script src="js/models/game.js"></script>
+    <script src="js/models/board.js"></script>
+    <script src="js/models/player.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/gameCtrl.js"></script>
 </head>
